<?xml version="1.0" encoding="utf-8"?>
<!--
    Berkas layout XML ini mendefinisikan tata letak untuk menampilkan informasi detail
    tentang sebuah catatan dalam aplikasi Android. Ini mencakup dua elemen TextView
    untuk menampilkan judul dan deskripsi catatan, serta tombol untuk mengedit dan
    menghapus catatan.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Deklarasi binding data -->
    <data>
        <variable
            name="activity"
            type="com.example.noteappvictor.ui.activity.DetailActivity" />
    </data>

    <!-- Kontainer tata letak utama -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TextView untuk menampilkan judul catatan -->
        <TextView
            android:id="@+id/detail_title_note_text_view"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_title"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/title"
            android:textColor="@color/textColorButton"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- TextView untuk menampilkan deskripsi catatan -->
        <TextView
            android:id="@+id/detail_note_description_text_view"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_description"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/description"
            android:textColor="@color/textColorButton"
            android:textSize="18sp" />

        <!-- Tombol untuk mengedit catatan -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:onClick="editData"
            android:padding="@dimen/_16sdp"
            android:text="@string/edit"
            android:textColor="@color/textColorButton" />

        <!-- Tombol untuk menghapus catatan -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:onClick="deleteData"
            android:padding="@dimen/_16sdp"
            android:text="@string/delete"
            android:textColor="@color/textColorButton" />
    </LinearLayout>
</layout>
