<?xml version="1.0" encoding="utf-8"?>
<!--
    Berkas layout XML ini digunakan untuk menampilkan formulir pengeditan catatan
    dalam aplikasi Android. Ini mencakup TextInputLayout untuk judul dan deskripsi catatan,
    serta tombol "Edit".
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Deklarasi binding data untuk aktivitas EditNoteActivity -->
    <data>
        <variable
            name="activity"
            type="com.example.noteappvictor.ui.activity.EditNoteActivity" />
    </data>

    <!-- Kontainer tata letak utama -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TextInputLayout untuk judul catatan -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_title_note_text_input_layout"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_title"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title_note"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/enter_title"
                android:inputType="textAutoComplete"
                android:text='@={activity.title}'
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TextInputLayout untuk deskripsi catatan -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_note_description_text_input_layout"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_description"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="3"
                android:text='@={activity.description}'
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tombol "Edit" -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:onClick="editData"
            android:padding="@dimen/_16sdp"
            android:text="@string/edit"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>
