<?xml version="1.0" encoding="utf-8"?><!-- Layout untuk Activity AddNoteActivity dan penyusunan layout di activity_add_data.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <!-- Mendeklarasikan variabel activity yang merepresentasikan AddNoteActivity -->
        <variable
            name="activity"
            type="com.example.noteappvictor.ui.activity.AddNoteActivity" />
    </data>

    <!-- Tampilan layout menggunakan LinearLayout dengan orientasi vertikal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TextInputLayout untuk memasukkan judul catatan -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_title_note_text_input_layout"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_title"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <!-- TextInputEditText untuk memasukkan judul catatan -->
            <!-- Binding data dari AddNoteActivity ke TextInputEditText -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_title_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/enter_title"
                android:inputType="textAutoComplete"
                android:text='@={activity.title}'
                app:passwordToggleEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TextInputLayout untuk memasukkan deskripsi catatan -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_note_description_text_input_layout"
            style="@style/TextInputLayoutBoxColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_description"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <!-- TextInputEditText untuk memasukkan deskripsi catatan -->
            <!-- Binding data dari AddNoteActivity ke TextInputEditText -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:padding="@dimen/_16sdp"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="3"
                android:text='@={activity.description}'
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tombol untuk menyimpan data catatan -->
        <!-- Mengatur fungsi onClick untuk tombol -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="saveData"
            android:padding="@dimen/_16sdp"
            android:text="@string/save"
            android:textColor="@color/textColorButton" />
    </LinearLayout>
</layout>
